[package]
name = "hello-delay"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
rtt-target = "0.6.2"
stm32f1xx-hal = {version = "0.11.0", features = ["stm32f103"]}
